# cpp-technical-evaluation

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/app/: main.cpp
src/common/include/: common.hpp
src/frame_consumer/include/: gstreamer_frame_motion_consumer.hpp
src/frame_consumer/src/: gstreamer_frame_motion_consumer.cpp
src/frame_producer/include/: rtsp_gstreamer_frame_producer.hpp
src/frame_producer/src/: rtsp_gstreamer_frame_producer.cpp
src/frame_queue/include/: frame_queue.hpp
src/motion_detector/include/: motion_detector.hpp
src/motion_observer/include/: motion_observer.hpp
src/recorder/include/: rtsp_gstreamer_recorder.hpp
src/recorder/src/: rtsp_gstreamer_recorder.cpp
src/rtsp_motion_recorder_camera/include/: rtsp_motion_camera.hpp
src/rtsp_motion_recorder_camera/src/: rtsp_motion_camera.cpp
test/: CMakeLists.txt
test/unittests/: frame_queue_unittests.cpp
